--- a/static/style.css
+++ b/static/style.css
@@ -267,3 +267,16 @@ h5 {
     display: inline-block;
     padding: 15px;
 }
+
+h3 {
+    text-align: left;
+    padding-left: 30px;
+    color: rgb(176, 231, 252);
+    font-weight: bold;
+    text-decoration: underline white;
+    text-underline-position: under;
+}
+
+.link {
+    color: white;
+}
